# houston

./: .config.toml.swp  .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  config.example.toml  rebuild.sh
.github/workflows/: rust.yml
admin-ui/: index.html  package-lock.json  package.json  vite.config.ts
admin-ui/src/: App.svelte  app.css
admin-ui/src/lib/: api.ts
admin-ui/src/pages/: Apps.svelte  AuditLog.svelte  Dashboard.svelte  Sessions.svelte  Users.svelte
docs/plans/: 2026-03-09-minikta-design.md  2026-03-09-minikta-implementation.md
migrations/: V001__initial_schema.sql  V002__add_user_app_assignments.sql  V003__add_bookmark_protocol.sql  V004__add_app_icon_and_launch_url.sql
src/: config.rs  lib.rs  main.rs  server.rs
src/admin/: apps.rs  assignments.rs  audit.rs  mod.rs  sessions.rs  spa.rs  users.rs
src/auth/: mod.rs  password.rs  session.rs  totp.rs  webauthn.rs
src/crypto/: hkdf.rs  keys.rs  mod.rs
src/db/: apps.rs  assignments.rs  audit.rs  mod.rs  sessions.rs  users.rs
src/middleware/: auth.rs  csrf.rs  mod.rs  rate_limit.rs
src/oidc/: authorize.rs  discovery.rs  mod.rs  token.rs  userinfo.rs
src/saml/: metadata.rs  mod.rs  sso.rs
src/web/: apps.rs  login.rs  mod.rs  webauthn.rs
tests/: admin_api.rs  oidc_flow.rs  saml_flow.rs
