[package]
name = "minikta"
version = "0.1.0"
edition = "2021"
description = "Minimal self-hosted identity provider with OIDC and SAML support"

[dependencies]
# HTTP & async
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "uuid"] }
deadpool = "0.12"
refinery = { version = "0.8", features = ["rusqlite"] }

# OIDC / JWT
jsonwebtoken = "9"

# SAML
samael = { version = "0.0.17", features = ["xmlsec"] }
quick-xml = "0.37"

# Auth
argon2 = "0.5"
totp-rs = { version = "5", features = ["qr", "gen_secret"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"

# Crypto
ring = "0.17"
base64 = "0.22"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
config = "0.14"

# Embedded assets
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }
hex = "0.4"
urlencoding = "2"
flate2 = "1"
rpassword = "7"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
